Enhance workload and testing tool interface
Signed-off-by: mozhuli <21621232@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -13,8 +13,29 @@
                 "name": "wrk",
                 "image": "capstan/wrk:v1.0",
                 "steps": 5,
-                "testingCaseSet": "benchmarkPodIPSameNode,benchmarkVIPSameNode,benchmarkPodIPDiffNode,benchmarkVIPDiffNode"
-            }          
+                "testingCaseSet": [
+                    {
+                        "name": "benchmarkPodIPSameNode",
+                        "workloadArgs": "",
+                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
+                    },
+                    {
+                        "name": "benchmarkVIPSameNode",
+                        "workloadArgs": "",
+                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
+                    },
+                    {
+                        "name": "benchmarkPodIPDiffNode",
+                        "workloadArgs": "",
+                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
+                    },
+                    {
+                        "name": "benchmarkVIPDiffNode",
+                        "workloadArgs": "",
+                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
+                    }
+                ]
+            }
         },
         {
             "name": "iperf",
@@ -23,8 +44,29 @@
                 "name": "iperf",
                 "image": "capstan/iperf-client:v1.0",
                 "steps": 5,
-                "testingCaseSet": "benchmarkTCPSameNode,benchmarkUDPSameNode,benchmarkTCPDiffNode,benchmarkUDPDiffNode"
-            }        
+                "testingCaseSet": [
+                    {
+                        "name": "benchmarkTCPSameNode",
+                        "workloadArgs": "iperf -s",
+                        "testingToolArgs": "iperf -c ${ENDPOINT} -i 2 -t 60"
+                    },
+                    {
+                        "name": "benchmarkUDPSameNode",
+                        "workloadArgs": "iperf -s",
+                        "testingToolArgs": "iperf -c ${ENDPOINT} -u -i 2 -t 60 -b 1000M"
+                    },
+                    {
+                        "name": "benchmarkTCPDiffNode",
+                        "workloadArgs": "iperf -s",
+                        "testingToolArgs": "iperf -c ${ENDPOINT} -u -i 2 -t 60"
+                    },
+                    {
+                        "name": "benchmarkUDPDiffNode",
+                        "workloadArgs": "iperf -s",
+                        "testingToolArgs": "iperf -c ${ENDPOINT} -u -i 2 -t 60 -b 1000M"
+                    }
+                ]
+            }
         }
     ]
 }
