Implement testing cases of wrk
Signed-off-by: mozhuli <21621232@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -8,62 +8,19 @@
     "Workloads": [
         {
             "name": "nginx",
-            "image": "nginx:17.9",
+            "image": "nginx:1.7.9",
             "testingTool": {
                 "name": "wrk",
-                "image": "capstan/wrk:v1.0",
-                "steps": 5,
+                "image": "wadelee/wrk",
+                "steps": 10,
                 "testingCaseSet": [
-                    {
-                        "name": "benchmarkPodIPSameNode",
-                        "workloadArgs": "",
-                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
-                    },
-                    {
-                        "name": "benchmarkVIPSameNode",
-                        "workloadArgs": "",
-                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
-                    },
                     {
                         "name": "benchmarkPodIPDiffNode",
-                        "workloadArgs": "",
-                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
+                        "testingToolArgs": "-t10 -c100 -d30 http://$(ENDPOINT)/"
                     },
                     {
-                        "name": "benchmarkVIPDiffNode",
-                        "workloadArgs": "",
-                        "testingToolArgs": "wrk -t 8 -c 1000 -d 180 --latency ${ENDPOINT}"
-                    }
-                ]
-            }
-        },
-        {
-            "name": "iperf",
-            "image": "capstan/iperf-server:v1.0",
-            "testingTool": {
-                "name": "iperf",
-                "image": "capstan/iperf-client:v1.0",
-                "steps": 5,
-                "testingCaseSet": [
-                    {
-                        "name": "benchmarkTCPSameNode",
-                        "workloadArgs": "iperf -s",
-                        "testingToolArgs": "iperf -c ${ENDPOINT} -i 2 -t 60"
-                    },
-                    {
-                        "name": "benchmarkUDPSameNode",
-                        "workloadArgs": "iperf -s",
-                        "testingToolArgs": "iperf -c ${ENDPOINT} -u -i 2 -t 60 -b 1000M"
-                    },
-                    {
-                        "name": "benchmarkTCPDiffNode",
-                        "workloadArgs": "iperf -s",
-                        "testingToolArgs": "iperf -c ${ENDPOINT} -u -i 2 -t 60"
-                    },
-                    {
-                        "name": "benchmarkUDPDiffNode",
-                        "workloadArgs": "iperf -s",
-                        "testingToolArgs": "iperf -c ${ENDPOINT} -u -i 2 -t 60 -b 1000M"
+                        "name": "benchmarkPodIPSameNode",
+                        "testingToolArgs": "-t10 -c100 -d30 http://$(ENDPOINT)/"
                     }
                 ]
             }
