Export to prometheus
Signed-off-by: mozhuli <21621232@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -1,14 +1,16 @@
 {
+    "UUID": "123456",
     "ResultsDir": "/tmp/capstan",
     "Address": "0.0.0.0:8080",
-    "Cadvisor": {
-        "Sampling": 5
+    "Prometheus": {
+        "PushgatewayEndpoint": "http://172.31.205.50:9091"
     },
     "Steps": 10,
     "Workloads": [
         {
             "name": "nginx",
             "image": "nginx:1.7.9",
+            "frequency": 5,
             "testingTool": {
                 "name": "wrk",
                 "image": "wadelee/wrk",
