Add iperf3 workload
Signed-off-by: mozhuli 21621232@zju.edu.cn

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -26,6 +26,26 @@
                     }
                 ]
             }
+        },
+        {
+            "name": "iperf3",
+            "image": "wadelee/iperf3",
+            "frequency": 5,
+            "testingTool": {
+                "name": "iperf3",
+                "image": "wadelee/iperf3",
+                "steps": 10,
+                "testingCaseSet": [
+                    {
+                        "name": "benchmarkTCPSameNode",
+                        "testingToolArgs": "-c $(ENDPOINT)"
+                    },
+                    {
+                        "name": "benchmarkTCPDiffNode",
+                        "testingToolArgs": "-c $(ENDPOINT)"
+                    }
+                ]
+            }
         }
     ]
 }
