Add mysql workload
Signed-off-by: mozhuli 21621232@zju.edu.cn

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -6,7 +6,7 @@
         "PushgatewayEndpoint": "http://172.31.205.50:9091"
     },
     "Steps": 10,
-    "Namespace": "capstan"
+    "Namespace": "capstan",
     "Workloads": [
         {
             "name": "nginx",
@@ -44,6 +44,26 @@
                     {
                         "name": "benchmarkTCPDiffNode",
                         "testingToolArgs": "-c $(ENDPOINT)"
+                    }
+                ]
+            }
+        },
+        {
+            "name": "mysql",
+            "image": "wadelee/mysql",
+            "frequency": 5,
+            "testingTool": {
+                "name": "tpcc-mysql",
+                "image": "wadelee/tpcc-mysql",
+                "steps": 10,
+                "testingCaseSet": [
+                    {
+                        "name": "benchmarkTPMCSameNode",
+                        "testingToolArgs": "-w1 -c10 -r60 -l60"
+                    },
+                    {
+                        "name": "benchmarkTPMCDiffNode",
+                        "testingToolArgs": "-w1 -c10 -r60 -l60"
                     }
                 ]
             }
