bug: fix the namespace
Signed-off-by: ZeroMagic <anthonyliu@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -6,6 +6,7 @@
         "PushgatewayEndpoint": "http://172.31.205.50:9091"
     },
     "Steps": 10,
+    "Namespace": "capstan"
     "Workloads": [
         {
             "name": "nginx",
