docs: update the docs about deployment
Signed-off-by: ZeroMagic <anthonyliu@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -2,9 +2,8 @@
     "UUID": "123456",
     "ResultsDir": "/tmp/capstan",
     "Provider": "aliyun",
-    "Address": "0.0.0.0:8080",
     "Prometheus": {
-        "PushgatewayEndpoint": "http://172.31.205.50:9091"
+        "PushgatewayEndpoint": "http://<Your-HostIP>:9091"
     },
     "Steps": 10,
     "Namespace": "capstan",
@@ -20,11 +19,11 @@
                 "testingCaseSet": [
                     {
                         "name": "benchmarkPodIPDiffNode",
-                        "testingToolArgs": "-t10 -c100 -d30 http://$(ENDPOINT)/"
+                        "testingToolArgs": "-t10 -c100 -d90 http://$(ENDPOINT)/"
                     },
                     {
                         "name": "benchmarkPodIPSameNode",
-                        "testingToolArgs": "-t10 -c100 -d30 http://$(ENDPOINT)/"
+                        "testingToolArgs": "-t10 -c100 -d90 http://$(ENDPOINT)/"
                     }
                 ]
             }
