feature: add "Provider" field
Signed-off-by: ZeroMagic <anthonyliu@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -1,6 +1,7 @@
 {
     "UUID": "123456",
     "ResultsDir": "/tmp/capstan",
+    "Provider": "aliyun",
     "Address": "0.0.0.0:8080",
     "Prometheus": {
         "PushgatewayEndpoint": "http://172.31.205.50:9091"
