Support workload managed by helm
Signed-off-by: mozhuli 21621232@zju.edu.cn

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -51,7 +51,11 @@
         },
         {
             "name": "mysql",
-            "image": "wadelee/mysql",
+            "helm": {
+                "name": "capstan",
+                "set": "mysqlRootPassword=capstan,persistence.enabled=false",
+                "chart": "stable/mysql"
+            },
             "frequency": 5,
             "testingTool": {
                 "name": "tpcc-mysql",
