docs: update quickstart
Signed-off-by: ZeroMagic <anthonyliu@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -4,7 +4,7 @@
     "Provider": "aliyun",
     "Address": "0.0.0.0:8080",
     "Prometheus": {
-        "PushgatewayEndpoint": "http://172.31.205.50:9091"
+        "PushgatewayEndpoint": "http://<Your-HostIP>:9091"
     },
     "Steps": 10,
     "Namespace": "capstan",
