--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -3,48 +3,61 @@
     "ResultsDir": "/tmp/capstan",
     "Provider": "aliyun",
     "Address": "0.0.0.0:8080",
-    "Prometheus": {
-        "PushgatewayEndpoint": "http://<Your-HostIP>:9091"
-    },
+    "PushgatewayEndpoint": "http://<Your-HostIP>:9091",
     "Steps": 10,
     "Namespace": "capstan",
     "Workloads": [
         {
             "name": "nginx",
-            "image": "nginx:1.7.9",
+            "helm": {
+                "name": "chart1",
+                "set": "imageTag=1.7.9",
+                "chart": "charts/nginx-0.1.0.tgz"
+            },
             "frequency": 5,
-            "testingTool": {
+            "testTool": {
                 "name": "wrk",
-                "image": "wadelee/wrk",
+                "script": "scripts/wrk.sh",
                 "steps": 10,
-                "testingCaseSet": [
+                "testCaseSet": [
                     {
-                        "name": "benchmarkPodIPDiffNode",
-                        "testingToolArgs": "-t10 -c100 -d30 http://$(ENDPOINT)/"
+                        "name": "case1",
+                        "affinity": true,
+                        "args": "-t10 -c100 -d30 http://chart1-nginx/",
+                        "metrics": "QPS"
                     },
                     {
-                        "name": "benchmarkPodIPSameNode",
-                        "testingToolArgs": "-t10 -c100 -d30 http://$(ENDPOINT)/"
+                        "name": "case2",
+                        "affinity": false,
+                        "args": "-t10 -c100 -d30 http://chart1-nginx/",
+                        "metrics": "QPS"
                     }
                 ]
             }
         },
         {
             "name": "iperf3",
-            "image": "wadelee/iperf3",
+            "helm": {
+                "name": "chart2",
+                "chart": "charts/iperf3-0.1.0.tgz"
+            },
             "frequency": 5,
-            "testingTool": {
+            "testTool": {
                 "name": "iperf3",
-                "image": "wadelee/iperf3",
+                "script": "scripts/iperf3.sh",
                 "steps": 10,
-                "testingCaseSet": [
+                "testCaseSet": [
                     {
-                        "name": "benchmarkTCPSameNode",
-                        "testingToolArgs": "-c $(ENDPOINT)"
+                        "name": "case1",
+                        "affinity": true,
+                        "args": "-c chart2-iperf3",
+                        "metrics": "BandWidth"
                     },
                     {
-                        "name": "benchmarkTCPDiffNode",
-                        "testingToolArgs": "-c $(ENDPOINT)"
+                        "name": "case2",
+                        "affinity": false,
+                        "args": "-c chart2-iperf3",
+                        "metrics": "BandWidth"
                     }
                 ]
             }
@@ -52,23 +65,29 @@
         {
             "name": "mysql",
             "helm": {
-                "name": "capstan",
+                "name": "chart3",
                 "set": "mysqlRootPassword=capstan,persistence.enabled=false",
                 "chart": "stable/mysql"
             },
             "frequency": 5,
-            "testingTool": {
+            "testTool": {
                 "name": "tpcc-mysql",
-                "image": "wadelee/tpcc-mysql",
+                "script": "scripts/tpcc-mysql.sh",
                 "steps": 10,
-                "testingCaseSet": [
+                "testCaseSet": [
                     {
-                        "name": "benchmarkTPMCSameNode",
-                        "testingToolArgs": "-w1 -c10 -r60 -l60"
+                        "name": "case1",
+                        "affinity": true,
+                        "args": "-w1 -c10 -r60 -l60",
+                        "envs": "MYSQL_HOST=chart3-mysql,MYSQL_ROOT_PASSWORD=capstan",
+                        "metrics": "TPMC"
                     },
                     {
-                        "name": "benchmarkTPMCDiffNode",
-                        "testingToolArgs": "-w1 -c10 -r60 -l60"
+                        "name": "case2",
+                        "affinity": false,
+                        "args": "-w1 -c10 -r60 -l60",
+                        "envs": "MYSQL_HOST=chart3-mysql,MYSQL_ROOT_PASSWORD=capstan",
+                        "metrics": "TPMC"
                     }
                 ]
             }
