Add spark workload
Signed-off-by: mozhuli <21621232@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -18,6 +18,7 @@
             "testTool": {
                 "name": "wrk",
                 "script": "scripts/wrk.sh",
+                "image": "wadelee/capstan-base",
                 "steps": 10,
                 "testCaseSet": [
                     {
@@ -45,6 +46,7 @@
             "testTool": {
                 "name": "iperf3",
                 "script": "scripts/iperf3.sh",
+                "image": "wadelee/capstan-base",
                 "steps": 10,
                 "testCaseSet": [
                     {
@@ -73,6 +75,7 @@
             "testTool": {
                 "name": "tpcc-mysql",
                 "script": "scripts/tpcc-mysql.sh",
+                "image": "wadelee/capstan-base",                
                 "steps": 10,
                 "testCaseSet": [
                     {
@@ -91,6 +94,28 @@
                     }
                 ]
             }
-        }
+        },
+        {
+            "name": "spark",
+            "helm": {
+                "name": "chart4",
+                "chart": "charts/spark-0.1.0.tgz"
+            },
+            "frequency": 5,
+            "testTool": {
+                "name": "spark-bench",
+                "script": "scripts/spark-bench.sh",
+                "image": "wadelee/spark-base",
+                "steps": 10,
+                "testCaseSet": [
+                    {
+                        "name": "case1",
+                        "affinity": false,
+                        "envs": "SPARK_HOME=/usr/local/spark,SPARK_MASTER_HOST=spark://chart4-master:7077",
+                        "metrics": "total_runtime"
+                    }
+                ]
+            }
+        }        
     ]
 }
