add wordpress workload

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -138,6 +138,29 @@
                     }
                 ]
             }
-        }        
+        },       
+		{
+            "name": "wordpress",
+            "helm": {
+                "name": "chart5",
+                "set": "persistence.enabled=false,mariadb.persistence.enabled=false,serviceType=ClusterIP",
+                "chart": "stable/wordpress"
+            },
+            "frequency": 5,
+            "testTool": {
+                "name": "wrk",
+                "script": "scripts/wordpress.sh",
+                "image": "wadelee/capstan-base",
+                "steps": 10,
+                "testCaseSet": [
+                    {
+                        "name": "case1",
+                        "affinity": true,
+                        "args": "-t4 -c10 -d30 http://chart5-wordpress",
+                        "metrics": "QPS"
+                    }
+                ]
+            }
+        }       
     ]
 }
