Add kubeflow workload
Signed-off-by: ZeroMagic <anthonyliu@zju.edu.cn>

--- a/examples/capstan.conf
+++ b/examples/capstan.conf
@@ -23,13 +23,13 @@
                 "testCaseSet": [
                     {
                         "name": "case1",
-                        "affinity": true,
+                        "affinity": "true",
                         "args": "-t10 -c100 -d30 http://chart1-nginx/",
                         "metrics": "QPS"
                     },
                     {
                         "name": "case2",
-                        "affinity": false,
+                        "affinity": "false",
                         "args": "-t10 -c100 -d30 http://chart1-nginx/",
                         "metrics": "QPS"
                     }
@@ -51,13 +51,13 @@
                 "testCaseSet": [
                     {
                         "name": "case1",
-                        "affinity": true,
+                        "affinity": "true",
                         "args": "-c chart2-iperf3",
                         "metrics": "BandWidth"
                     },
                     {
                         "name": "case2",
-                        "affinity": false,
+                        "affinity": "false",
                         "args": "-c chart2-iperf3",
                         "metrics": "BandWidth"
                     }
@@ -80,14 +80,14 @@
                 "testCaseSet": [
                     {
                         "name": "case1",
-                        "affinity": true,
+                        "affinity": "true",
                         "args": "-w1 -c10 -r60 -l60",
                         "envs": "MYSQL_HOST=chart3-mysql,MYSQL_ROOT_PASSWORD=capstan",
                         "metrics": "TPMC"
                     },
                     {
                         "name": "case2",
-                        "affinity": false,
+                        "affinity": "false",
                         "args": "-w1 -c10 -r60 -l60",
                         "envs": "MYSQL_HOST=chart3-mysql,MYSQL_ROOT_PASSWORD=capstan",
                         "metrics": "TPMC"
@@ -110,9 +110,31 @@
                 "testCaseSet": [
                     {
                         "name": "case1",
-                        "affinity": false,
+                        "affinity": "any",
                         "envs": "SPARK_HOME=/usr/local/spark,SPARK_MASTER_HOST=spark://chart4-master:7077",
                         "metrics": "total_runtime"
+                    }
+                ]
+            }
+        },
+        {
+            "name": "kubeflow",
+            "helm": {
+                "name": "chart6",
+                "chart": "charts/kubeflow-0.1.0.tgz"
+            },
+            "frequency": 5,
+            "testTool": {
+                "name": "kubeflow-cnn",
+                "script": "scripts/kubeflow-cnn.sh",
+                "image": "wadelee/capstan-kubectl",
+                "steps": 10,
+                "serviceAccountName": "tfjob",
+                "testCaseSet": [
+                    {
+                        "name": "case1",
+                        "affinity": "any",
+                        "metrics": "images_second"
                     }
                 ]
             }
